--- a/addons/hr_recruitment/static/src/scss/hr_job.scss
+++ b/addons/hr_recruitment/static/src/scss/hr_job.scss
@@ -7,27 +7,6 @@
             }
         }
 
-        .ribbon {
-            &::before, &::after {
-                display: none;
-            }
-
-            span {
-                padding: 5px;
-                font-size: small;
-                z-index: unset;
-                height: auto;
-            }
-        }
-        .ribbon-top-right {
-            margin-top: -$o-kanban-dashboard-vpadding;
-
-            span {
-                left: 0px;
-                right: 30px;
-            }
-        }
-
         .text_top_padding{
             padding-top: 0.375rem;
         }
@@ -57,31 +36,6 @@
 
             .o_field_boolean_favorite {
                 display: inline;
-            }
-        }
-    }
-}
-
-.o_kanban_applicant {
-    .o_kanban_renderer {
-        .ribbon {
-            &::before, &::after {
-                display: none;
-            }
-
-            span {
-                padding: 5px;
-                font-size: x-small;
-                z-index: unset;
-                height: auto;
-            }
-        }
-        .ribbon-top-right {
-            margin-top: -$o-kanban-dashboard-vpadding;
-
-            span {
-                top: 10px;
-                left: 20px;
             }
         }
     }
