--- a/addons/sales_team/static/src/scss/crm_team_views.scss
+++ b/addons/sales_team/static/src/scss/crm_team_views.scss
@@ -14,22 +14,6 @@
         }
     }
     .ribbon {
-        &::before, &::after {
-            display: none;
-        }
-
-        span {
-            padding: 5px;
-            font-size: small;
-            height: auto;
-        }
-    }
-    .ribbon-top-right {
-        margin-top: -$o-kanban-dashboard-vpadding;
-
-        span {
-            left: 0px;
-            right: 30px;
-        }
+        --Ribbon-wrapper-width: 6rem;
     }
 }
